@@ -29,7 +29,9 @@ EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 package com.jcraft.jsch;
 
-public class KeyPairDSA extends KeyPair{
+import java.math.BigInteger;
+
+class KeyPairDSA extends KeyPair{
   private byte[] P_array;
   private byte[] Q_array;
   private byte[] G_array;
@@ -39,11 +41,11 @@ public class KeyPairDSA extends KeyPair{
   //private int key_size=0;
   private int key_size=1024;
 
-  public KeyPairDSA(JSch jsch){
+  KeyPairDSA(JSch jsch){
     this(jsch, null, null, null, null, null);
   }
 
-  public KeyPairDSA(JSch jsch,
+  KeyPairDSA(JSch jsch,
                     byte[] P_array,
                     byte[] Q_array,
                     byte[] G_array,
@@ -56,14 +58,15 @@ public class KeyPairDSA extends KeyPair{
     this.pub_array = pub_array;
     this.prv_array = prv_array;
     if(P_array!=null)
-      key_size = (new java.math.BigInteger(P_array)).bitLength();
+      key_size = (new BigInteger(P_array)).bitLength();
   }
 
+  @Override
   void generate(int key_size) throws JSchException{
     this.key_size=key_size;
     try{
-      Class c=Class.forName(jsch.getConfig("keypairgen.dsa"));
-      KeyPairGenDSA keypairgen=(KeyPairGenDSA)(c.newInstance());
+      Class<? extends KeyPairGenDSA> c=Class.forName(JSch.getConfig("keypairgen.dsa")).asSubclass(KeyPairGenDSA.class);
+      KeyPairGenDSA keypairgen=c.getDeclaredConstructor().newInstance();
       keypairgen.init(key_size);
       P_array=keypairgen.getP();
       Q_array=keypairgen.getQ();
@@ -74,19 +77,20 @@ public class KeyPairDSA extends KeyPair{
       keypairgen=null;
     }
     catch(Exception e){
-      //System.err.println("KeyPairDSA: "+e); 
-      if(e instanceof Throwable)
-        throw new JSchException(e.toString(), (Throwable)e);
-      throw new JSchException(e.toString());
+      //System.err.println("KeyPairDSA: "+e);
+      throw new JSchException(e.toString(), e);
     }
   }
 
   private static final byte[] begin=Util.str2byte("-----BEGIN DSA PRIVATE KEY-----");
   private static final byte[] end=Util.str2byte("-----END DSA PRIVATE KEY-----");
 
+  @Override
   byte[] getBegin(){ return begin; }
+  @Override
   byte[] getEnd(){ return end; }
 
+  @Override
   byte[] getPrivateKey(){
     int content=
       1+countLength(1) + 1 +                           // INTEGER
@@ -111,23 +115,24 @@ public class KeyPairDSA extends KeyPair{
     return plain;
   }
 
+  @Override
   boolean parse(byte[] plain){
     try{
 
       if(vendor==VENDOR_FSECURE){
-	if(plain[0]!=0x30){              // FSecure
-	  Buffer buf=new Buffer(plain);
-	  buf.getInt();
-	  P_array=buf.getMPIntBits();
-	  G_array=buf.getMPIntBits();
-	  Q_array=buf.getMPIntBits();
-	  pub_array=buf.getMPIntBits();
-	  prv_array=buf.getMPIntBits();
+        if(plain[0]!=0x30){              // FSecure
+          Buffer buf=new Buffer(plain);
+          buf.getInt();
+          P_array=buf.getMPIntBits();
+          G_array=buf.getMPIntBits();
+          Q_array=buf.getMPIntBits();
+          pub_array=buf.getMPIntBits();
+          prv_array=buf.getMPIntBits();
           if(P_array!=null)
-            key_size = (new java.math.BigInteger(P_array)).bitLength();
-	  return true;
-	}
-	return false;
+            key_size = (new BigInteger(P_array)).bitLength();
+          return true;
+        }
+        return false;
       }
       else if(vendor==VENDOR_PUTTY){
         Buffer buf=new Buffer(plain);
@@ -142,6 +147,29 @@ public class KeyPairDSA extends KeyPair{
         }
 
         return true;
+      }
+
+      // OPENSSH Key v1 Format
+      else if (vendor == VENDOR_OPENSSH_V1) {
+
+        final Buffer prvKEyBuffer = new Buffer(plain);
+        int checkInt1 = prvKEyBuffer.getInt(); // uint32 checkint1
+        int checkInt2 = prvKEyBuffer.getInt(); // uint32 checkint2
+        if (checkInt1 != checkInt2) {
+          throw new JSchException("check failed");
+        }
+        // The private key section contains both the public key and the private key
+        String keyType = Util.byte2str(prvKEyBuffer.getString()); // string keytype
+
+        P_array=prvKEyBuffer.getMPInt();
+        Q_array=prvKEyBuffer.getMPInt();
+        G_array= prvKEyBuffer.getMPInt();
+        pub_array=prvKEyBuffer.getMPInt();
+        prv_array=prvKEyBuffer.getMPInt();
+        publicKeyComment=Util.byte2str(prvKEyBuffer.getString());
+        //if(P_array!=null) key_size = (new BigInteger(P_array)).bitLength();
+        return true;
+
       }
 
       int index=0;
@@ -215,7 +243,7 @@ public class KeyPairDSA extends KeyPair{
       index+=length;
 
       if(P_array!=null)
-        key_size = (new java.math.BigInteger(P_array)).bitLength();
+        key_size = (new BigInteger(P_array)).bitLength();
     }
     catch(Exception e){
       //System.err.println(e);
@@ -225,6 +253,7 @@ public class KeyPairDSA extends KeyPair{
     return true;
   }
 
+  @Override
   public byte[] getPublicKeyBlob(){
     byte[] foo=super.getPublicKeyBlob();
     if(foo!=null) return foo;
@@ -240,17 +269,21 @@ public class KeyPairDSA extends KeyPair{
   }
 
   private static final byte[] sshdss=Util.str2byte("ssh-dss");
+  @Override
   byte[] getKeyTypeName(){return sshdss;}
+  @Override
   public int getKeyType(){return DSA;}
 
+  @Override
   public int getKeySize(){
     return key_size;
   }
 
+  @Override
   public byte[] getSignature(byte[] data){
-    try{      
-      Class c=Class.forName((String)jsch.getConfig("signature.dss"));
-      SignatureDSA dsa=(SignatureDSA)(c.newInstance());
+    try{
+      Class<? extends SignatureDSA> c=Class.forName(JSch.getConfig("signature.dss")).asSubclass(SignatureDSA.class);
+      SignatureDSA dsa=c.getDeclaredConstructor().newInstance();
       dsa.init();
       dsa.setPrvKey(prv_array, P_array, Q_array, G_array);
 
@@ -267,10 +300,16 @@ public class KeyPairDSA extends KeyPair{
     return null;
   }
 
+  @Override
+  public byte[] getSignature(byte[] data, String alg){
+    return getSignature(data);
+  }
+
+  @Override
   public Signature getVerifier(){
-    try{      
-      Class c=Class.forName((String)jsch.getConfig("signature.dss"));
-      SignatureDSA dsa=(SignatureDSA)(c.newInstance());
+    try{
+      Class<? extends SignatureDSA> c=Class.forName(JSch.getConfig("signature.dss")).asSubclass(SignatureDSA.class);
+      SignatureDSA dsa=c.getDeclaredConstructor().newInstance();
       dsa.init();
 
       if(pub_array == null && P_array == null && getPublicKeyBlob()!=null){
@@ -280,7 +319,7 @@ public class KeyPairDSA extends KeyPair{
         Q_array = buf.getString();
         G_array = buf.getString();
         pub_array = buf.getString();
-      } 
+      }
 
       dsa.setPubKey(pub_array, P_array, Q_array, G_array);
       return dsa;
@@ -289,6 +328,11 @@ public class KeyPairDSA extends KeyPair{
       //System.err.println("e "+e);
     }
     return null;
+  }
+
+  @Override
+  public Signature getVerifier(String alg){
+    return getVerifier();
   }
 
   static KeyPair fromSSHAgent(JSch jsch, Buffer buf) throws JSchException {
@@ -303,11 +347,12 @@ public class KeyPairDSA extends KeyPair{
     KeyPairDSA kpair = new KeyPairDSA(jsch,
                                       P_array, Q_array, G_array,
                                       pub_array, prv_array);
-    kpair.publicKeyComment = new String(tmp[6]);
+    kpair.publicKeyComment = Util.byte2str(tmp[6]);
     kpair.vendor=VENDOR_OPENSSH;
     return kpair;
   }
 
+  @Override
   public byte[] forSSHAgent() throws JSchException {
     if(isEncrypted()){
       throw new JSchException("key is encrypted.");
@@ -325,6 +370,7 @@ public class KeyPairDSA extends KeyPair{
     return result;
   }
 
+  @Override
   public void dispose(){
     super.dispose();
     Util.bzero(prv_array);
